# Cheshire-Terminal-Agents

./: .env.example  .gitignore  README.md  package-lock.json  package.json
agents/: airdrop-hunter.json  alpha-leak-detector.json  apy-vs-apr-educator.json  bridge-security-analyst.json  clawd-bridge-assistant.json  clawd-governance-guide.json  clawd-liquidity-strategist.json  clawd-onboarding-guide.json  clawd-portfolio-tracker.json  clawd-risk-monitor.json  clawd-yield-aggregator.json  crypto-news-analyst.json  crypto-tax-strategist.json  defi-insurance-advisor.json  defi-onboarding-mentor.json  defi-protocol-comparator.json  defi-risk-scoring-engine.json  defi-yield-farmer.json  dex-aggregator-optimizer.json  gas-optimization-expert.json  governance-proposal-analyst.json  impermanent-loss-calculator.json  layer2-comparison-guide.json  liquidation-risk-manager.json  liquidity-pool-analyzer.json  mev-protection-advisor.json  narrative-trend-analyst.json  nft-liquidity-advisor.json  portfolio-rebalancing-advisor.json  protocol-revenue-analyst.json  protocol-treasury-analyst.json  pump-fun-sdk-expert.json  smart-contract-auditor.json  spa-tokenomics-analyst.json  stablecoin-comparator.json  staking-rewards-calculator.json  token-unlock-tracker.json  usds-stablecoin-expert.json  vespa-optimizer.json  wallet-security-advisor.json  (+3 more)
docs/: GO_BOT_INTEGRATION.md  OMNI_MINT.md  ZK_OMNI.md
examples/: solana-agent.json
programs/zk_omni/: Cargo.toml  idl.json
programs/zk_omni/src/: lib.rs
scripts/: import-agents.mjs  install-packages.mjs  run-package.mjs  zk-omni-relayer.mjs  (+2 more)
(+25 files in other folders)
