[package]
name = "zk_omni"
version = "0.1.0"
description = "Cheshire ZK Omnichain Solana receiver — nullifier PDA + peer-authenticated messages"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_omni"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
